--- a/html/mmbase/admin/components/tree.jspx
+++ b/html/mmbase/admin/components/tree.jspx
@@ -6,19 +6,32 @@
     xmlns:jsp="http://java.sun.com/JSP/Page" 
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
   <jsp:output omit-xml-declaration="true" />
-  <h1>Classified blocks</h1>
-  <mm:functioncontainer>
-    <mm:listfunction set="components" name="blockClassification">
-      <mm:write request="blockType" />
-      <mm:include page="blockType.jspx" />
-    </mm:listfunction>
-  </mm:functioncontainer>
-  <h1>Unclassified blocks</h1>
-  <mm:functioncontainer>
-    <mm:param name="id"></mm:param>
-    <mm:listfunction set="components" name="blockClassification">
-      <mm:write request="blockType" />
-      <mm:include page="blockType.jspx" />
-    </mm:listfunction>
-  </mm:functioncontainer>
+  <mm:import externid="type" />
+  <mm:notpresent referid="type">
+    <h1>Classified blocks</h1>
+    <mm:functioncontainer>
+      <mm:listfunction set="components" name="blockClassification">
+        <mm:write request="blockType" />
+        <mm:include page="blockType.jspx" />
+      </mm:listfunction>
+    </mm:functioncontainer>
+    <h1>Unclassified blocks</h1>
+    <mm:functioncontainer>
+      <mm:param name="id"></mm:param>
+      <mm:listfunction set="components" name="blockClassification">
+        <mm:write request="blockType" />
+        <mm:include page="blockType.jspx" />
+      </mm:listfunction>
+    </mm:functioncontainer>
+  </mm:notpresent>
+  <mm:present referid="type">
+    <h1>Blocks for ${type}</h1>
+    <mm:functioncontainer>
+      <mm:param name="id">${type}</mm:param>
+      <mm:listfunction set="components" name="blockClassification">
+        <mm:write request="blockType" />
+        <mm:include page="blockType.jspx" />
+      </mm:listfunction>
+    </mm:functioncontainer>
+  </mm:present>
 </div>
