--- a/mmbase/trunk/applications/resources/templates/test.jspx
+++ b/mmbase/trunk/applications/resources/templates/test.jspx
@@ -1,7 +1,7 @@
-<mm:content 
+<mm:content
     type="application/xhtml+xml" language="client" expires="0" postprocessor="none" jspvar="locale"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
-    xmlns:mm-im="urn:jsptagdir:/WEB-INF/tags/mm/resources"
+    xmlns:mm-res="http://www.mmbase.org/tags/mm/resources"
     xmlns:fn="http://java.sun.com/jsp/jstl/functions"
     xmlns:jsp="http://java.sun.com/JSP/Page"
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
@@ -14,17 +14,17 @@
       <jsp:directive.include file="head.jspx" />
     </head>
     <body class="basic">
-      <mm-im:captcha />
-      <mm-im:thumb file="/plaatjes/mmbase.gif" template="r(90)+s(20x20)" />
+      <mm-res:captcha key="${sessionScope.captchakey}"/>
+      <mm-res:thumb file="/mmbase/style/logo.gif" template="r(90)+s(20x20)" />
       <mm:cloud>
         <mm:listnodes type="images" max="2">
-          <mm-im:captcha template="s(100)" fill="white" />
+          <mm-res:captcha template="s(100)" fill="white" />
         </mm:listnodes>
       </mm:cloud>
 
       <mm:component name="resources" block="captchamail">
         <mm:param name="title">Mail me!</mm:param>
-        <mm:param name="to">michiel.meeuwissen@gmail.com</mm:param>
+        <mm:param name="to">mmform@localhost</mm:param>
       </mm:component>
     </body>
   </html>
