--- a/mmbase/trunk/contributions/didactor2/src/core/templates/editwizards/style/color/debug.css
+++ b/mmbase/trunk/contributions/didactor2/src/core/templates/editwizards/style/color/debug.css
@@ -4,7 +4,7 @@
   You can override parts (cascading), by specifying an 'extrastyle' in your own 'base.xsl'.
 
   @author Nico Klasens
-  @version  $Id: debug.css,v 1.1 2004-11-01 12:52:43 jdiepenmaat Exp $
+  @version  $Id: debug.css,v 1.2 2006-11-15 17:07:28 mmeeuwissen Exp $
 */
 
 .tab {
