--- a/mmbase/trunk/contributions/didactor2/src/core/templates/editwizards/style/layout/wizard.css
+++ b/mmbase/trunk/contributions/didactor2/src/core/templates/editwizards/style/layout/wizard.css
@@ -1,9 +1,9 @@
-/**
+/*
   Editwizard cascading style sheet.
 
   This is the style specific to 'wizard' pages.
 
-  @version  $Id: wizard.css,v 1.3 2006-05-09 15:37:05 igeorgijev Exp $
+  @version  $Id: wizard.css,v 1.4 2006-11-15 17:24:05 mmeeuwissen Exp $
 
 body
 table.head
@@ -44,305 +44,313 @@ table.body
                                     tr.fieldcanvas-edit
                                 table.itembuttons
                                 tr.listcanvas
-*/ 
+*/
 
 @import url("base.css");
 
 tr.beforeformcanvas,
-tr.formcanvas  {
-   border-width: 0px;
-   border-style: solid;
-   padding: 5px;
-   width: 100%;
+tr.formcanvas {
+    border-width: 0px;
+    border-style: solid;
+    padding: 5px;
+    width: 100%;
 }
 
-table.stepscontent  {
-	font-size: 11px;
-	padding: 2px 4px 2px 4px;
-	vertical-align:	top;
-	text-align:	left;
-	border-width: 0px; 
-	border-style: solid;
-	border-collapse: collapse;
-	width: auto;
+table.stepscontent {
+    font-size: 11px;
+    padding: 2px 4px 2px 4px;
+    vertical-align: top;
+    text-align: left;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+    width: auto;
     white-space: nowrap;
 }
 
 td.stepprevious,
-td.stepnext  {         
-        border-width: 0px;
-        border-style: solid;
-        padding-left: 5px;
-        padding-right: 5px;
-        width: 1%;
+td.stepnext {
+    border-width: 0px;
+    border-style: solid;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 1%;
 }
 
-td.stepcurrent  {         
-        border-width: 2px;
-        border-style: groove;
-        border-bottom-width: 0px;
-        padding-left: 5px;
-        padding-right: 5px;
-        width: 1%;
-} 
-
-td.stepother  {         
-        border-width: 2px;
-        border-style: groove;
-        padding-left: 5px;
-        padding-right: 5px;
-        width: 1%;
-} 
-
-div.buttonscontent  {         
-        position: absolute;
-        bottom: 0px;
-        font-size: 11px;
-        font-weight: normal;
-        padding: 0px 0px 0px 0px;
-        width: 100%;
-        z-index: 10;
-        text-align: center;
-} 
-
-table.buttonscontent  {
-	font-size: 11px;
-	padding: 2px 4px 2px 4px;
-	vertical-align:	top;
-	text-align:	center;
-	border-width: 0px; 
-	border-style: solid;
-	border-collapse: collapse;
-	border-top-width: 3px;
-	width: 100%;
+td.stepcurrent {
+    border-width: 2px;
+    border-style: groove;
+    border-bottom-width: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 1%;
 }
+
+td.stepother {
+    border-width: 2px;
+    border-style: groove;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 1%;
+}
+
+div.buttonscontent {
+    position: absolute;
+    bottom: 0px;
+    font-size: 11px;
+    font-weight: normal;
+    padding: 0px 0px 0px 0px;
+    width: 100%;
+    z-index: 10;
+    text-align: center;
+}
+
+table.buttonscontent {
+    font-size: 11px;
+    padding: 2px 4px 2px 4px;
+    vertical-align: top;
+    text-align: center;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+    border-top-width: 3px;
+    width: 100%;
+}
+
 table.buttonscontent tr td {
-        white-space: nowrap;
-} 
-
-div.editform  {         
-  overflow: auto;
-  width: 100%;
+    white-space: nowrap; 
 }
 
-table.formcontent  {
-	font-size:11px;
-	padding: 2px 4px 2px 4px;
-	vertical-align:	top;
-	text-align:	left;
-	border-width: 0px; 
-	border-style: solid;
-	border-collapse: collapse;
-	width: 97%;
+div.editform {
+    overflow: auto;
+    width: 100%;
+}
+
+table.formcontent {
+    font-size: 11px;
+    padding: 2px 4px 2px 4px;
+    vertical-align: top;
+    text-align: left;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+    width: 97%;
 }
 
 tr.fieldcanvas,
 tr.fieldsetcanvas,
-tr.fieldcanvas-edit  {         
-        font-size: 11px;
-        font-weight: normal;
-        padding: 5px 10px 5px 10px;
-} 
-tr.fieldcanvas-edit  {
-        cursor: default;
-}
-td.fieldprompt  {  
-	    white-space:nowrap;   
-        font-weight: 600;
-        text-align: left;
-        vertical-align: top;
-}
-span.valid {
-        font-weight: 600;
-}
-span.notvalid  {
-        font-weight: 600;
-} 
-
-td.field  {         
-        text-align: left;
-        width: 100%;
-} 
-tr.listcanvas  { 
-        font-size: 11px;               
-        font-weight: normal;
-        padding: 15px 10px 15px 10px;
-} 
-table.listcontent  {
-	font-size: 11px;
-	padding: 0px;
-	vertical-align:	top;
-	text-align:	left;
-	border-width: 3px; 
-	border-style: solid;
-	border-collapse: separate;
-    border-spacing: 0px;
-	width: 100%;
-}
-
-table.listhead  {
+tr.fieldcanvas-edit {
     font-size: 11px;
-    padding: 0px
-	margin: 0px;
-	border-width: 0px; 
-	border-style: solid;
-	border-collapse: collapse;
+    font-weight: normal;
+    padding: 5px 10px 5px 10px;
 }
 
-td.listprompt  {         
-  font-weight: 600;
-  font-size: 12px;
-  padding: 0px;
-  vertical-align:	top;
-  text-align: left;
+tr.fieldcanvas-edit {
+    cursor: default; 
 }
 
-td.listnewbuttons  {         
-        font-size: 11px;
-        padding: 0px;
-        vertical-align:	top;
-        text-align: left;
-        width: 1%;
-} 
-
-td.listsearch  {         
-        font-size: 11px;
-        padding: 0px;
-        vertical-align:	top;
-        text-align: left;
-        width: 100%;
-} 
-
-table.searchcontent  {
-        font-size: 11px;                
-        padding: 0px;
-        border-width: 0px;
-        border-style: solid;
-        border-collapse: collapse;
-        text-align: right;
-        vertical-align: top;
-        width: auto;
-} 
-
-tr.itemcanvas  {
-        font-size: 11px;                
-        padding-left: 5px;
-        border-spacing: 0px;
-        border-collapse: collapse;
-        width: 100%;
-        text-align: left;
-        vertical-align: top;
-} 
-
-td.itemprefix  {
-    width: 10%;
+.fieldintro {
+   font-style: italic;
+   font-weight: 100;
+   text-align: left;
+   vertical-align: top;
 }
 
-table.itemcontent  {
-	font-size: 11px;
-	padding: 2px 4px 2px 4px;
-	vertical-align:	top;
-	text-align:	left;
-	border-width: 0px; 
-	border-style: solid;
-	border-collapse: collapse;
-	width: 100%;
+td.fieldprompt {
+    font-weight: 600;
+    text-align: right;
+    vertical-align: top;
 }
 
-td.itemfields  {
-	font-size: 11px;
-	padding: 2px;
-	vertical-align:	top;
-	text-align:	left;
-	width: 100%;
+span.valid {
+    font-weight: 600; 
 }
 
-td.itembuttons  {
-	font-size: 11px;
-	padding: 0px;
-	vertical-align:	top;
-	text-align:	right;
-	width: 1%;
+span.notvalid {
+    font-weight: 600; 
 }
 
-table.fieldscontent  {
-        font-size: 11px;
-        font-weight: normal;
-        border-style: solid;
-        border-width: 1px;
-        border-collapse: separate;
-        width: 100%;
+td.field {
+    vertical-align: top;
+    text-align: left;
+    width: 100%;
 }
+
+tr.listcanvas {
+    font-size: 11px;
+    font-weight: normal;
+    padding: 15px 10px 15px 10px;
+}
+
+table.listcontent {
+    font-size: 11px;
+    padding: 0px;
+    vertical-align: top;
+    text-align: left;
+    border-width: 3px;
+    border-style: solid;
+    border-collapse: separate;
+    border-spacing: 0px;
+    width: 100%;
+}
+
+table.listhead {
+    font-size: 11px;
+    padding: 0px;
+    margin: 0px;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+}
+
+td.listprompt {
+    font-weight: 600;
+    font-size: 12px;
+    padding: 0px;
+    vertical-align: top;
+    text-align: left;
+}
+
+td.listnewbuttons {
+    font-size: 11px;
+    padding: 0px;
+    vertical-align: top;
+    text-align: left;
+    width: 1%;
+}
+
+td.listsearch {
+    font-size: 11px;
+    padding: 0px;
+    vertical-align: top;
+    text-align: left;
+    width: 100%;
+}
+
+table.searchcontent {
+    font-size: 11px;
+    padding: 0px;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+    text-align: right;
+    vertical-align: top;
+    width: auto;
+}
+
+tr.itemcanvas {
+    font-size: 11px;
+    padding-left: 5px;
+    border-spacing: 0px;
+    border-collapse: collapse;
+    width: 100%;
+    text-align: left;
+    vertical-align: top;
+}
+
+td.itemprefix {
+    width: 10%; 
+}
+
+table.itemcontent {
+    font-size: 11px;
+    padding: 2px 4px 2px 4px;
+    vertical-align: top;
+    text-align: left;
+    border-width: 0px;
+    border-style: solid;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td.itemfields {
+    font-size: 11px;
+    padding: 2px;
+    vertical-align: top;
+    text-align: left;
+    width: 100%;
+}
+
+td.itembuttons {
+    font-size: 11px;
+    padding: 0px;
+    vertical-align: top;
+    text-align: right;
+    width: 1%;
+}
+
+table.fieldscontent {
+    font-size: 11px;
+    font-weight: normal;
+    border-style: solid;
+    border-width: 1px;
+    border-collapse: separate;
+    width: 100%;
+}
+
 /* fieldscontent changes into itemrow when it is used to open an item */
 table.itemrow,
-table.itemrow-hover  {         
-        font-size: 11px;
-        font-weight: normal;
-        cursor: pointer;
-        cursor: hand;
-        border-style: solid;
-        border-width: 1px;
-        border-collapse: separate;
+table.itemrow-hover {
+    font-size: 11px;
+    font-weight: normal;
+    cursor: pointer;
+    border-style: solid;
+    border-width: 1px;
+    border-collapse: separate;
 }
 
-tr.itemline  {
-	margin: 0px;
-	padding: 0px;
-	width: 100%;
-	height: 1px;
+tr.itemline {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 1px;
 }
 
-input.date  {         
-        width: auto;
+input.date {
+    width: auto; 
+}
+
+input.calendar {
+    width: 17px; height: 17px; 
 }
 
 input.input,
-textarea.input  {
-        width: 100%;
+textarea.input {
+    width: 100%; 
 }
-
-textarea.input { 
-    height: 13em;
-}
-    
 
 span.time_at {
-  padding-left: 2ex;
-  padding-right: 2ex;
-
+    padding-left: 2ex;
+    padding-right: 2ex;
 }
 
 a.bottombutton:link,
 a.bottombutton:visited,
 a.bottombutton:hover,
-a.bottombutton:active  {
-        font-size: 20px;
-        cursor: pointer;
-        cursor: hand;
+a.bottombutton:active {
+    font-size: 20px;
+    cursor: pointer;
 }
+
 a.bottombutton-disabled:link,
 a.bottombutton-disabled:visited,
 a.bottombutton-disabled:hover,
-a.bottombutton-disabled:active  {
-        font-size: 20px;
-        cursor: default;
+a.bottombutton-disabled:active {
+    font-size: 20px;
+    cursor: default;
 }
 
- /* 
-    the size.
-    Must correspond to height of div.searchresult and position of table.pagenav in searchlist.css
-  */
-.searchframe { 
-	width: 402px; 
+.searchframe {
+    width: 402px;
     height: 302px;
     background-color: #FFFFFF;
     z-index: 3000;
 }
 
 div.searchframe {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  visibility: hidden; 
-  padding-bottom: 20;
-} 
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    padding-bottom: 20;
+}
