--- a/contributions/poll/templates/index.jspx
+++ b/contributions/poll/templates/index.jspx
@@ -1,13 +1,13 @@
 <div class="poll" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:c="http://java.sun.com/jsp/jstl/core" 
       xmlns:jsp="http://java.sun.com/JSP/Page" 
-      xmlns:mm-poll="http://www.mmbase.org/tags/mm/poll"       
+      xmlns:mm-poll="http://www.mmbase.org/tags/mm/poll"                   
       xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
   <!--     
-   xmlns:mm-poll="urn:jsptagdir:/WEB-INF/tags/mm/poll"     
+       xmlns:mm-poll="urn:jsptagdir:/WEB-INF/tags/mm/poll"     
   -->
   <jsp:output omit-xml-declaration="yes" />
-  <mm:content expires="0" type="application/xml+xhtml">
+  <mm:content expires="0" type="application/xhtml+xml">
     <mm:cloud>
       <mm:url id="baseurl" write="false" />
       
