--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/style/base.css
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/style/base.css
@@ -1,3 +1,4 @@
+@import url(layout.css);
 
 html, body.portal {
     background-color: #2e72f8;
@@ -5,8 +6,6 @@ html, body.portal {
 }
 
 div.x1 {
-    float: left;
-    width: 200px;
     background-color: #2e72f8;
 }
 
@@ -14,21 +13,12 @@ div.x1 div.menu {
     background-color: #e2641b;
 }
 
-div.x2 {
-    padding-left: 220px;
-    padding-right: 240px;
-}
-
 div.x3 {
-    float: right;
-    width: 220px;
     background-color: #2e72f8;
     
 }
 
 div.column h1 {
-    padding-left: 1ex;
-    padding-right: 1ex;
     color: white;
     background-image: url("bg_title.jpg");
     background-repeat: no-repeat;
